[package]
name = "sdkwork-api-interface-http"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
serde.workspace = true
sdkwork-api-app-gateway = { path = "../sdkwork-api-app-gateway" }
sdkwork-api-contract-openai = { path = "../sdkwork-api-contract-openai" }
sdkwork-api-storage-sqlite = { path = "../sdkwork-api-storage-sqlite" }
sqlx.workspace = true

[dev-dependencies]
sdkwork-api-interface-admin = { path = "../sdkwork-api-interface-admin" }
sdkwork-api-storage-sqlite = { path = "../sdkwork-api-storage-sqlite" }
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true

[lib]
path = "src/lib.rs"
