[package]
name = "sdkwork-api-interface-http"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
reqwest.workspace = true
serde.workspace = true
sdkwork-api-app-billing = { path = "../sdkwork-api-app-billing" }
sdkwork-api-app-credential = { path = "../sdkwork-api-app-credential" }
sdkwork-api-app-gateway = { path = "../sdkwork-api-app-gateway" }
sdkwork-api-app-identity = { path = "../sdkwork-api-app-identity" }
sdkwork-api-app-routing = { path = "../sdkwork-api-app-routing" }
sdkwork-api-app-usage = { path = "../sdkwork-api-app-usage" }
sdkwork-api-contract-openai = { path = "../sdkwork-api-contract-openai" }
sdkwork-api-provider-core = { path = "../sdkwork-api-provider-core" }
sdkwork-api-storage-core = { path = "../sdkwork-api-storage-core" }
sdkwork-api-storage-sqlite = { path = "../sdkwork-api-storage-sqlite" }
serde_json.workspace = true
sqlx.workspace = true

[dev-dependencies]
ed25519-dalek.workspace = true
sdkwork-api-ext-provider-native-mock = { path = "../sdkwork-api-ext-provider-native-mock" }
sdkwork-api-extension-core = { path = "../sdkwork-api-extension-core" }
sha2.workspace = true
toml.workspace = true
sdkwork-api-interface-admin = { path = "../sdkwork-api-interface-admin" }
sdkwork-api-storage-sqlite = { path = "../sdkwork-api-storage-sqlite" }
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true

[lib]
path = "src/lib.rs"
