[package]
name = "sdkwork-api-provider-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
futures-util.workspace = true
reqwest.workspace = true
sdkwork-api-contract-openai = { path = "../sdkwork-api-contract-openai" }
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true

[lib]
path = "src/lib.rs"
