[package]
name = "sdkwork-api-provider-ollama"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
reqwest.workspace = true
sdkwork-api-contract-openai = { path = "../sdkwork-api-contract-openai" }
sdkwork-api-domain-catalog = { path = "../sdkwork-api-domain-catalog" }
sdkwork-api-provider-core = { path = "../sdkwork-api-provider-core" }
sdkwork-api-provider-openai = { path = "../sdkwork-api-provider-openai" }
serde_json.workspace = true

[dev-dependencies]
axum.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lib]
path = "src/lib.rs"
