[package]
name = "sdkwork-api-storage-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
sdkwork-api-domain-catalog = { path = "../sdkwork-api-domain-catalog" }
sdkwork-api-domain-credential = { path = "../sdkwork-api-domain-credential" }
sqlx.workspace = true

[dev-dependencies]
tokio.workspace = true

[lib]
path = "src/lib.rs"
