[package]
name = "gateway-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
sdkwork-api-config = { path = "../../crates/sdkwork-api-config" }
sdkwork-api-interface-http = { path = "../../crates/sdkwork-api-interface-http" }
tokio.workspace = true
